# dijo

./: Cargo.toml  flake.nix
src/: main.rs
src/app/: impl_self.rs  impl_view.rs  mod.rs
src/habit/: traits.rs
