[package]
name = "dijo"
version = "0.2.7"
authors = ["Akshay <nerdy@peppe.rs>"]
edition = "2018"
description = "Scriptable, curses-based, digital habit tracker"
homepage = "https://github.com/nerdypepper/dijo"
repository = "https://github.com/nerdypepper/dijo"
readme = './readme.md'
keywords = ["tracker", "event-tracker", "tui", "journal"]
categories = ["date-and-time", "command-line-interface"]
license = "MIT"

[dependencies]
serde_json = "1.0"
lazy_static = "1.4"
erased-serde = "0.4"
typetag = "0.2"
directories = "6.0"
clap = "4.5"
notify = "8.0"
toml = "0.8"
syn = "=2.0"

[dependencies.cursive]
version = "0.21.1"
default-features = false

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0.103"
features = ["derive"]

[features]
default = ["termion-backend"]
termion-backend = ["cursive/termion-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
